# cxx-template

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .travis.yml  CMakeLists.txt
.github/workflows/: build_cmake.yml
cmake/: CPM.cmake  FindSphinx.cmake  code-coverage.cmake  compiler-options.cmake  cuda-standard.cmake  cxx-standard.cmake  doxygen.cmake  formatting.cmake  sanitizers.cmake  tools.cmake  utilities.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  index.rst
test/: CMakeLists.txt  test_first.cpp
